--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.dev.js",
     "server": "node ./build/server.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js",
+    "build:dll": "webpack --config ./build/webpack.dll.js"
   },
   "author": "zhanghaomin",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "@babel/runtime": "^7.12.5",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^10.2.1",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
