--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,17 @@
             },
             "useBuiltIns": "usage"
         }],
-        "@babel/preset-react"
+        [
+            "@babel/preset-react",
+            {
+                "runtime": "automatic"
+            }
+        ]
     ],
-    "plugins": ["@babel/plugin-syntax-dynamic-import"]
+    "plugins": [
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
+        ["@babel/plugin-proposal-class-properties", { "loose" : true }],
+        "@babel/plugin-syntax-dynamic-import",
+        "react-refresh/babel"
+    ]
 }
