--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
@@ -42,11 +45,14 @@
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^5.0.0",
     "postcss-loader": "^4.1.0",
+    "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.9.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "thread-loader": "^3.0.1",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1",
@@ -55,12 +61,20 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^2.6.10",
     "lodash": "^4.17.20",
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5"
   }
