--- a/.babelrc
+++ b/.babelrc
@@ -14,9 +14,9 @@
         ]
     ],
     "plugins": [
+        // "react-refresh/babel",
         ["@babel/plugin-proposal-decorators", { "legacy": true }],
         ["@babel/plugin-proposal-class-properties", { "loose" : true }],
-        "@babel/plugin-syntax-dynamic-import",
-        "react-refresh/babel"
+        "@babel/plugin-syntax-dynamic-import"
     ]
 }
