--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "style-loader": "^2.0.0",
     "thread-loader": "^3.0.1",
     "ts-loader": "^8.0.14",
+    "type-fest": "^1.0.1",
     "typescript": "^4.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
