--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hm-common-template",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "一个自用的react、vue工程化模版",
   "main": "index.js",
   "sideEffects": [
@@ -43,6 +43,7 @@
     "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^4.5.1",
     "jquery": "^3.5.1",
+    "less-loader": "^8.0.0",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^5.0.0",
     "postcss-loader": "^4.1.0",
@@ -67,9 +68,12 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
+    "antd": "^4.15.0",
     "axios": "^0.21.1",
+    "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.10",
+    "less": "^4.1.1",
     "lodash": "^4.17.20",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
