--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router": "^5.1.13",
