--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,23 @@
 {
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "jsx": "react",
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "outDir": "./dist",
-        "module": "es6",
-        "target": "ES5",
-        "allowJs": true,
-        "jsx": "react",
-        "allowSyntheticDefaultImports": true
+      "jsx": "react"
     }
+  },
+  "include": ["src"]
 }
