--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "file-loader": "^6.2.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "less-loader": "^8.0.0",
     "mini-css-extract-plugin": "^1.3.4",
@@ -65,21 +66,27 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@testing-library/jest-dom": "^5.11.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.15.0",
     "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
     "babel-plugin-import": "^1.13.3",
+    "camelcase": "^6.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.12",
+    "i18next": "^20.2.1",
+    "jest-watch-typeahead": "^0.6.2",
     "less": "^4.1.1",
     "lodash": "^4.17.20",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.12",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
