加入eslint检验，ts规范检验

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,58 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "noEmit": true,
-    "jsx": "react",
-    "compilerOptions": {
-      "jsx": "react"
-    }
-  },
-  "include": ["src"]
+    "incremental": true,                        
+    "target": "es5",                               
+    "module": "ES2020",                         
+    // "lib": [],                                 
+    // "allowJs": true,                          
+    // "checkJs": true,                            
+    "jsx": "react",                        
+    // "declaration": true,                        
+    // "declarationMap": true,                  
+    // "sourceMap": true,                          
+    // "outFile": "./",                            
+    // "outDir": "./",                           
+    // "rootDir": "./src",                            
+    // "composite": true,                         
+    // "tsBuildInfoFile": "./",                    
+    "removeComments": true,                     
+    // "noEmit": true,                            
+    // "importHelpers": true,                      
+    // "downlevelIteration": true,               
+    // "isolatedModules": true,                
+    // "strict": true,                              
+    // "noImplicitAny": true,                     
+    // "strictNullChecks": true,                  
+    // "strictFunctionTypes": true,               
+    // "strictBindCallApply": true,              
+    // "strictPropertyInitialization": true,      
+    // "noImplicitThis": true,                    
+    // "alwaysStrict": true,                      
+
+    /* Additional Checks */
+    // "noUnusedLocals": true,                    
+    // "noUnusedParameters": true,               
+    // "noImplicitReturns": true,                 
+    // "noFallthroughCasesInSwitch": true,         
+    // "noUncheckedIndexedAccess": true,          
+    // "noPropertyAccessFromIndexSignature": true, 
+    // "moduleResolution": "node",               
+    // "baseUrl": "./",                           
+    // "paths": {},                               
+    // "rootDirs": [],                          
+    // "typeRoots": [],                          
+    // "types": [],                                
+    // "allowSyntheticDefaultImports": true,       
+    "esModuleInterop": true,                       
+    // "preserveSymlinks": true,                   
+    // "allowUmdGlobalAccess": true,              
+    // "sourceRoot": "",                           
+    // "mapRoot": "",                               
+    // "inlineSourceMap": true,                    
+    // "inlineSources": true,                    
+    // "experimentalDecorators": true,            
+    // "emitDecoratorMetadata": true,              
+    "skipLibCheck": true, 
+    "forceConsistentCasingInFileNames": true
+  }
 }
