--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.dev.js",
-    "server": "node ./build/server.js",
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js",
-    "build:dll": "webpack --config ./build/webpack.dll.js"
+    "build:dll": "webpack --config ./build/webpack.dll.js",
+    "lint": "eslint --ext .js --ext .jsx --ext .ts --ext .tsx src/",
+    "tscheck": "tsc --watch"
   },
   "author": "zhanghaomin",
   "license": "ISC",
@@ -28,16 +29,21 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.12.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^10.2.1",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
-    "eslint": "^7.18.0",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-standard": "^5.0.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
