--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js",
     "build:dll": "webpack --config ./build/webpack.dll.js",
+    "build:test": "http-server ./dist",
     "lint": "eslint --ext .js --ext .jsx --ext .ts --ext .tsx src/",
     "tscheck": "tsc --watch"
   },
@@ -48,6 +49,7 @@
     "file-loader": "^6.2.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^4.5.1",
+    "http-server": "^0.12.3",
     "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "less-loader": "^8.0.0",
