--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,15 @@
   "compilerOptions": {
     "incremental": true,                        
     "target": "es5",                               
-    "module": "ES2020",                         
+    "module": "AMD",                         
     // "lib": [],                                 
     // "allowJs": true,                          
     // "checkJs": true,                            
     "jsx": "react",                        
     // "declaration": true,                        
     // "declarationMap": true,                  
-    // "sourceMap": true,                          
-    // "outFile": "./",                            
+    "sourceMap": false,                          
+    "outFile": "./tsTemp/tsRes.js",                            
     // "outDir": "./",                           
     // "rootDir": "./src",                            
     // "composite": true,                         
